--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  # O reemplaza por el nombre de tu rama principal
+      - main  # Despliega automáticamente al hacer push a la rama main
 
 jobs:
   build_and_deploy:
@@ -24,7 +24,8 @@ jobs:
       - name: Deploy to Firebase Hosting
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          PROJECT_ID: hello-firebase-59e70
         run: |
           echo "$FIREBASE_SERVICE_ACCOUNT" > $HOME/firebase-key.json
-          firebase deploy --project $PROJECT_ID --token "$(firebase login:ci --no-localhost)"
+          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/firebase-key.json"
+          firebase deploy --only hosting --project hello-firebase-59e70 --non-interactive --force
+
