--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  
+      - main
 
 jobs:
   build_and_deploy:
@@ -21,12 +21,18 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
+      - name: Authenticate with Firebase
+        env:
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+        run: |
+          echo "$FIREBASE_SERVICE_ACCOUNT" > $HOME/firebase-key.json
+          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/firebase-key.json"
+          firebase projects:list
+
       - name: Deploy to Firebase Hosting
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase-key.json
         run: |
           echo "$FIREBASE_SERVICE_ACCOUNT" > $HOME/firebase-key.json
-          firebase deploy --only hosting --non-interactive --project hello-firebase-59e70
-
-
+          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/firebase-key.json"
+          firebase deploy --only hosting --project hello-firebase-59e70 --non-interactive
